# Strelka-AnimSupply

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.py
include/display/: Display.h
include/render/: buffer.h
include/scene/: scene.h
include/sceneloader/: gltfloader.h
src/app/: CMakeLists.txt  CameraController.h  Editor.h  Params.h  main.cpp
src/display/: CMakeLists.txt  Display.cpp
src/display/metal/: glfwdisplay.h  glfwdisplay.mm
src/display/opengl/: glfwdisplay.cpp  glfwdisplay.h
src/render/metal/: MetalBuffer.cpp  MetalRender.cpp
src/render/metal/shaders/: ShaderTypes.h  lights.h  pathtrace.metal  tonemapper.metal
src/render/optix/: OptixBuffer.cpp  OptixBuffer.h  OptixRender.cpp  OptixRender.cu  OptixRender.h  OptixRender_radiance_closest_hit.cu  cuda_checks.h
src/scene/: camera.cpp  scene.cpp
src/sceneloader/: gltfloader.cpp
